infra/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: realestate
  labels:
    app.kubernetes.io/part-of: realestate
---
apiVersion: v1
kind: Namespace
metadata:
  name: realestate-dev
  labels:
    app.kubernetes.io/part-of: realestate
    environment: dev
